k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server-deployment
  namespace: core
spec:
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server
    spec:
      imagePullSecrets:
        - name: docker-secret
      containers:
        - name: go-server
          image: ghcr.io/imerkle/balancer-view-server:8ee0e7df88cfc36f6bd156f95133c0a2dfd00450
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: go-server-service
  namespace: core
spec:
  type: ClusterIP
  selector:
    app: go-server
  ports:
    - port: 80
      targetPort: 80
