k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: core
  name: core-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: balancerview.swapcharts.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  number: 80
    - host: balancerviewserver.swapcharts.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-server-service
                port:
                  number: 80
