k8s/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  namespace: core
spec:
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      imagePullSecrets:
        - name: docker-secret
      containers:
        - name: ui
          image: ghcr.io/imerkle/balancer-view-ui:latest
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: core
spec:
  type: ClusterIP
  selector:
    app: ui
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: core
  name: ui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: balancerview.157.230.214.89.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  number: 80
